--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html><head><base href="">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>three.js-ar.js-flask</title>
   <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
   <!-- we import arjs version without NFT but with marker + location based support -->
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
